<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_language">

        <SwitchPreference
            android:key="@string/pref_language_switch_key"
            android:title="@string/pref_language_switch_title"
            android:summaryOn="@string/pref_language_switch_on"
            android:summaryOff="@string/pref_language_switch_off"
            android:defaultValue="@string/pref_language_default_switch" />

        <ListPreference
            android:key="pref_language_value"
            android:dependency="pref_language_switch"
            android:title="@string/pref_language_list_title"
            android:entries="@array/pref_language_label"
            android:entryValues="@array/pref_language_value"
            android:dialogIcon="@drawable/ic_g_translate" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_reminder">

        <SwitchPreference
            android:key="@string/pref_daily_reminder_key"
            android:title="@string/pref_daily_reminder_title"
            android:summaryOn="@string/pref_daily_reminder_on"
            android:summaryOff="@string/pref_reminder_off"
            android:defaultValue="@string/pref_reminder_default_switch" />

        <SwitchPreference
            android:key="@string/pref_movie_release_reminder_key"
            android:title="@string/pref_movie_release_reminder_title"
            android:summaryOn="@string/pref_movie_release_reminder_on"
            android:summaryOff="@string/pref_reminder_off"
            android:defaultValue="@string/pref_reminder_default_switch" />

    </PreferenceCategory>

</PreferenceScreen>