<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SplashActivity"
    android:background="@color/colorPrimary">

    <Button
        android:id="@+id/splash_btn_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_about"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_gravity="top|end"
        android:background="@android:color/transparent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end|bottom"
        android:layout_margin="8dp"
        android:text="@string/app_version"
        android:textColor="@android:color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/rootViewSplashScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/splash_picture"
                android:layout_width="match_parent"
                android:layout_height="200sp"
                app:srcCompat="@drawable/maido3"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/splash_picture" />

            <TextView
                android:id="@+id/splash_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textAlignment="center"
                android:text="@string/app_name"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/splash_login_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/splash_login_info"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

                <EditText
                    android:id="@+id/splash_txt_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtUser"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:drawableStart="@drawable/ic_account"
                    android:drawablePadding="8dp"
                    tools:ignore="Autofill" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

                <EditText
                    android:id="@+id/splash_txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtPass"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:drawableStart="@drawable/ic_unlock"
                    android:drawablePadding="8dp"
                    tools:ignore="Autofill" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

                <Button
                    android:id="@+id/splash_btn_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnLogin"
                    android:textStyle="bold"
                    style="@style/Widget.MaterialComponents.Button"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/splash_btn_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnRegister"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    style="@style/Platform.MaterialComponents.Light"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>